--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@adiwajshing/baileys": "latest",
+    "axios": "latest",
     "express": "latest"
   },
   "scripts": {
